fix: Suppress unrelated deprecation warnings during building/running